[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/images/updated/game3_bg_end.png" type="Texture" id=1]
[ext_resource path="res://assets/images/game3_board_end_lv1.png" type="Texture" id=2]
[ext_resource path="res://assets/images/updated/game3_student_lv1.png" type="Texture" id=3]
[ext_resource path="res://assets/images/game3_trophy.png" type="Texture" id=4]
[ext_resource path="res://assets/buttons/public_home_yellow.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/NotoSansTC-Bold.otf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/buttons/public_nextlv_yellow.png" type="Texture" id=7]
[ext_resource path="res://assets/images/game3_gem_green.png" type="Texture" id=8]
[ext_resource path="res://Result.gd" type="Script" id=9]
[ext_resource path="res://assets/buttons/public_nextlv_green.png" type="Texture" id=10]
[ext_resource path="res://assets/buttons/public_home_green.png" type="Texture" id=11]
[ext_resource path="res://assets/sounds/hint_end_1.2.mp3" type="AudioStream" id=12]
[ext_resource path="res://assets/videos/lv1.ogv" type="VideoStream" id=13]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 6 )

[node name="Result" type="Node2D"]
script = ExtResource( 9 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 968, 728 )
scale = Vector2( 0.947, 0.947 )
texture = ExtResource( 1 )

[node name="ResultBoard" type="Sprite" parent="."]
position = Vector2( 752, 800 )
texture = ExtResource( 2 )
offset = Vector2( 224, -104 )

[node name="ButtonContainer" type="Sprite" parent="."]
position = Vector2( 976, 760 )

[node name="HomeButton" type="TextureButton" parent="ButtonContainer"]
margin_left = -472.0
margin_top = 294.0
margin_right = -31.0
margin_bottom = 459.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 11 )

[node name="NextButton" type="TextureButton" parent="ButtonContainer"]
margin_left = 24.0
margin_top = 294.0
margin_right = 465.0
margin_bottom = 459.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 10 )

[node name="Character" type="Sprite" parent="."]
position = Vector2( 256, 1120 )
scale = Vector2( 0.85, 0.85 )
texture = ExtResource( 3 )

[node name="TextContainer" type="Sprite" parent="."]

[node name="ScoreLabel" type="Label" parent="TextContainer"]
anchor_left = -0.185303
anchor_top = 8.0
anchor_right = 154.815
anchor_bottom = 31.0
margin_left = 1032.19
margin_top = 704.0
margin_right = 1141.19
margin_bottom = 777.0
rect_pivot_offset = Vector2( 56, 136 )
custom_colors/font_color = Color( 0.407843, 0.294118, 0.2, 1 )
custom_fonts/font = SubResource( 1 )
text = "20"
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScoreTitle" type="Label" parent="TextContainer"]
anchor_left = -0.185303
anchor_right = 138.815
anchor_bottom = 31.0
margin_left = 672.185
margin_top = 712.0
margin_right = 781.185
margin_bottom = 785.0
rect_pivot_offset = Vector2( 56, 136 )
custom_colors/font_color = Color( 0.407843, 0.294118, 0.2, 1 )
custom_fonts/font = SubResource( 1 )
text = "成績："
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PriceTitle" type="Label" parent="TextContainer"]
anchor_left = -0.185303
anchor_right = 138.815
anchor_bottom = 31.0
margin_left = 672.185
margin_top = 856.0
margin_right = 781.185
margin_bottom = 929.0
rect_pivot_offset = Vector2( 56, 136 )
custom_colors/font_color = Color( 0.407843, 0.294118, 0.2, 1 )
custom_fonts/font = SubResource( 1 )
text = "獎賞："
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PriceLabel" type="Label" parent="TextContainer"]
anchor_left = -0.185303
anchor_right = 154.815
anchor_bottom = 31.0
margin_left = 1032.19
margin_top = 856.0
margin_right = 1141.19
margin_bottom = 929.0
rect_pivot_offset = Vector2( 56, 136 )
custom_colors/font_color = Color( 0.407843, 0.294118, 0.2, 1 )
custom_fonts/font = SubResource( 1 )
text = "綠寶石"
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScoreIcon" type="Sprite" parent="TextContainer"]
position = Vector2( 966, 776 )
texture = ExtResource( 4 )

[node name="PriceIcon" type="Sprite" parent="TextContainer"]
position = Vector2( 968, 920 )
texture = ExtResource( 8 )

[node name="FailContainer" type="Sprite" parent="."]
visible = false

[node name="ScoreLabel" type="Label" parent="FailContainer"]
anchor_left = -0.185303
anchor_top = 8.0
anchor_right = 154.815
anchor_bottom = 31.0
margin_left = 1040.19
margin_top = 768.0
margin_right = 1149.19
margin_bottom = 841.0
rect_pivot_offset = Vector2( 56, 136 )
custom_colors/font_color = Color( 0.407843, 0.294118, 0.2, 1 )
custom_fonts/font = SubResource( 1 )
text = "20"
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScoreTitle" type="Label" parent="FailContainer"]
anchor_left = -0.185303
anchor_right = 138.815
anchor_bottom = 31.0
margin_left = 680.185
margin_top = 776.0
margin_right = 789.185
margin_bottom = 849.0
rect_pivot_offset = Vector2( 56, 136 )
custom_colors/font_color = Color( 0.407843, 0.294118, 0.2, 1 )
custom_fonts/font = SubResource( 1 )
text = "成績："
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ScoreIcon" type="Sprite" parent="FailContainer"]
position = Vector2( 974, 840 )
texture = ExtResource( 4 )

[node name="ResultAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="ResultVideoPlayer" type="VideoPlayer" parent="."]
visible = false
margin_right = 1936.0
margin_bottom = 1448.0
stream = ExtResource( 13 )

[connection signal="pressed" from="ButtonContainer/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="ButtonContainer/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="finished" from="ResultVideoPlayer" to="." method="_on_ResultVideoPlayer_finished"]
